--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    compile 'android.arch.persistence.room:runtime:1.0.0'
 }
