--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:26.1.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
+    compileOnly "org.projectlombok:lombok:1.16.20"
+    annotationProcessor 'org.projectlombok:lombok:1.16.20'
 }
