--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
     compileOnly 'org.projectlombok:lombok:1.16.20'
+    compile 'com.squareup.okhttp3:okhttp:x.x.x'
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
